--- a/themes/blank/layouts/_default/single.html
+++ b/themes/blank/layouts/_default/single.html
@@ -1,22 +1,47 @@
 {{ partial "header.html" . }}
-	<main>
-		<article>
-			<h1>{{ .Title }}</h1>
-			<time>{{ .Date.Format "02.01.2006 15:04" }}</time>
-			<div>
-				{{ .Content }}
-			</div>
-			<div>
-				<ul id="tags">
-					{{ range .Params.tags }}
-					<li><a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a> </li>
-					{{ end }}
-				</ul>
-			</div>
-			<div>
-				{{ template "_internal/disqus.html" . }}
-			</div>
-		</article>
-	</main>
+    <main>
+        <article>
+            <h1>{{ .Title }}</h1>
+            <time>{{ .Date.Format "02.01.2006" }}</time>
+            <div class="report" itemscope itemtype="http://schema.org/Person">
+                <h2>Health</h2>
+                    <dt>Age (days)</dt>
+                        <dd>{{ .Params.health.age }}</dd>
+                    <dt>Weight (kg)</dt>
+                        <dd itemtype="http://schema.org/weight">{{ .Params.health.weight }}</dd>
+                    <dt>Height (cm)</dt>
+                        <dd itemtype="http://schema.org/height">{{ .Params.health.height }}</dd>
+                <h2>Nutrition</h2>
+                    <dt>Calories (cal)</dt>
+                        <dd itemtype="http://schema.org/calories">{{ .Params.nutrition.calories }}</dd>
+                    <dt>Fat (g)</dt>
+                        <dd itemtype="http://schema.org/fatContent">{{ .Params.nutrition.fat }}</dd>
+                    <dt>Carbohydrates (g)</dt>
+                        <dd itemtype="http://schema.org/carbohydrateContent">{{ .Params.nutrition.carbohydrates }}</dd>
+                    <dt>Protein (g)</dt>
+                        <dd itemtype="http://schema.org/proteinContent">{{ .Params.nutrition.protein }}</dd>
+                <h2>Excercise</h2>
+                    <dt>Pushups</dt>
+                        <dd>{{ .Params.exercise.pushups }}</dd>
+                    <dt>Crunches</dt>
+                        <dd>{{ .Params.exercise.crunches }}</dd>
+                    <dt>Steps</dt>
+                        <dd>{{ .Params.exercise.steps }}</dd>
+            </div>
+            <div>
+                {{ .Content }}
+            </div>
+            <div>
+                <ul id="tags">
+                    {{ range .Params.tags }}
+                    <li><a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a> </li>
+                    {{ end }}
+                </ul>
+            </div>
+            <div>
+                {{ template "_internal/disqus.html" . }}
+            </div>
+        </article>
+    </main>
 {{ partial "sidebar.html" . }}
 {{ partial "footer.html" . }}
