--- a/themes/blank/layouts/partials/footer.html
+++ b/themes/blank/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 	<footer>
-		<p>&copy; {{ now.Year }} <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></p>
+		<p>&copy; {{ now.Year }} <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a> | <a href="http://www.avtibiografia.com">Avtobiografia</a><img src="http://topsitecounter.appspot.com/t" alt="Top Site Counter" width="1" height="1" /></p>
 	</footer>
 </body>
 </html>
