--- a/themes/blank/layouts/partials/header.html
+++ b/themes/blank/layouts/partials/header.html
@@ -17,7 +17,7 @@
 <body>
     <div class="wrapper">
     <header>
-        <h1><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
+        <h1><a href="{{ .Site.BaseURL }}">Quantified <span class="red">aquilax</span></a></h1>
         <nav>
             <ul>
                 {{ range .Site.Menus.main }}
