--- a/themes/blank/layouts/_default/single.html
+++ b/themes/blank/layouts/_default/single.html
@@ -29,7 +29,7 @@
                         <dd itemtype="http://schema.org/proteinContent"><span>{{ .Params.nutrition.protein }}</span></dd>
                 </dl>
 
-                <h3>Excercise</h3>
+                <h3>Exercise</h3>
                 <dl>
                     <dt><a href="/chart/chart/#pushups">Push-ups</a> (count)</dt>
                         <dd><span>{{ .Params.exercise.pushups }}</span></dd>
